I166: Numbers are normalized + small fixes such as table row items are vertically aligned in the middle

--- a/frontend/static/css/einzelkomponente.css
+++ b/frontend/static/css/einzelkomponente.css
@@ -42,6 +42,7 @@ html input[disabled] {
 
 input, select, textarea, button {
   font: inherit;
+  box-shadow: 0vmax 0.029vmax 0.039vmax 0vmax rgba(0, 0, 0, 0.07);
 }
 
 button, html input[type="button"], input[type="reset"] {
