--- a/frontend/static/css/process_styles.css
+++ b/frontend/static/css/process_styles.css
@@ -110,7 +110,7 @@ button, html input[type="button"], input[type="reset"] {
   width: 23.438vmax;
   max-height: 100%;
   max-width: 100%;
-  min-height: 2.604vmax;
+  min-height: 3.604vmax;
   min-width: 1.042vmax;
   float: left;
   clear: left;
@@ -176,6 +176,7 @@ button, html input[type="button"], input[type="reset"] {
 }
 
 .info-icon {
+  width: 4vh;
   position: relative;
   display: inline-block;
   overflow: visible;
@@ -223,6 +224,7 @@ button, html input[type="button"], input[type="reset"] {
 }
 
 .component-overview, .process-overview {
+  border-radius: 0.7vmax;
   padding-top: 2.083vmax;
   padding-left: 2.604vmax;
   padding-right: 2.604vmax;
@@ -290,12 +292,14 @@ button, html input[type="button"], input[type="reset"] {
 
 .create-button {
   position: static;
+  font-family: inherit;
   font-size: 0.781vmax;
   display: inline-block;
   padding: 0.469vmax 0.781vmax;
   margin-bottom: 0.156vmax;
   margin-right: 0.156vmax;
   background-color: #1f299c;
+  border-radius: 0.35vmax;
   color: white;
   border: 0;
   cursor: pointer;
@@ -375,6 +379,7 @@ button, html input[type="button"], input[type="reset"] {
   color: #333333;
   vertical-align: middle;
   border: 0.052vmax solid #ccc;
+  box-shadow: 0vmax 0.029vmax 0.039vmax 0vmax rgba(0, 0, 0, 0.07);
 }
 
 #process-feature-table .col-1 {
@@ -473,8 +478,11 @@ table .process-visualization {
 
 #modelling-process {
   vertical-align: middle;
-  border: 0.052vmax solid black;
+  border: 0.052vmax solid #0000002e;
   margin: 1.667vmax 0;
+  padding: 1vmax 1vmax;
+  box-shadow: 0vmax 0vmax 0.469vmax 0vmax rgba(0, 0, 0, 0.1);
+  border-radius: 0.7vmax;
 }
 
 .visualize {
