--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -340,6 +340,8 @@ td, th {
 }
 
 td {
+    display : flex;
+    align-items : center;
     height: auto;
     cursor: default;
     width: auto;
